--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <ul>
           <li><a class="colorGreen" href="#">About us</a></li>
           <li><a>Career</a></li>
-          <li><a>Departments</a></li>
+          <li>
+            <a>Departments</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -79,10 +81,8 @@
         <div class="doctor">
           <div class="text-block">
             <img src="/img/icon-doctors.svg" />
-            <h1>For patients</h1>
-            <h2>
-              Find a doctor, book a visit and solve any health-related doubt
-            </h2>
+            <h1>For doctors</h1>
+            <h2>Save time managing visits and cut no-shows by half</h2>
           </div>
           <div class="select-list">
             <select id="for-doctor">
@@ -106,10 +106,8 @@
         <div class="clinic">
           <div class="text-block">
             <img src="/img/icon-clinics.svg" />
-            <h1>For patients</h1>
-            <h2>
-              Find a doctor, book a visit and solve any health-related doubt
-            </h2>
+            <h1>For clinics</h1>
+            <h2>Deliver an exceptional patient experience in your clinic</h2>
           </div>
           <div class="select-list">
             <select id="for-clinic">
@@ -139,7 +137,7 @@
       <div class="fourth-section">
         <div class="content-4">
           <div class="content-4-text">
-            <h1>We are a global company with local culture</h1>
+            <h1>We are a global company <br />with local culture</h1>
           </div>
           <div class="content-4-logo">
             <ul class="list-1">
@@ -253,6 +251,229 @@
               </li>
             </ul>
           </div>
+        </div>
+      </div>
+      <!-- ------------------FIFTH SECTION------------------- -->
+
+      <div class="fifth-section">
+        <div class="section__inner">
+          <div class="grid">
+            <div class="left-5">
+              <h1>
+                The world's biggest
+                <br />
+                healthcare platform
+              </h1>
+              <p>
+                We work from 8 offices all over the world, bringing Docplanner
+                Group to life in 13 countries.
+              </p>
+            </div>
+            <div class="right-5">
+              <div class="right-item-1">
+                <div class="blocks">
+                  <img
+                    scr="https://www.docplanner.com/img/flag.png"
+                    srcset="
+                      https://www.docplanner.com/img/flag.png    1x,
+                      https://www.docplanner.com/img/flag@2x.png 2x
+                    "
+                    width="35"
+                    height="40"
+                  />
+
+                  <h3>Leader in 13 countries</h3>
+                  <p>
+                    Poland, Brazil, Mexico, Spain, Italy, Germany, Turkey,
+                    Colombia, Czech Republic, Portugal, Argentina, Peru and
+                    Chile
+                  </p>
+                </div>
+              </div>
+              <div class="right-item">
+                <div class="blocks">
+                  <img
+                    scr="https://www.docplanner.com/img/visits.png"
+                    srcset="
+                      https://www.docplanner.com/img/visits.png    1x,
+                      https://www.docplanner.com/img/visits@2x.png 2x
+                    "
+                    width="35"
+                    height="40"
+                  />
+                  <h3>
+                    7,500,000 <br />
+                    appointments
+                  </h3>
+                  <p>booked last month</p>
+                </div>
+              </div>
+
+              <div class="right-item-1">
+                <div class="right-item-1">
+                  <div class="blocks">
+                    <img
+                      scr="https://www.docplanner.com/img/patients.png"
+                      srcset="
+                        https://www.docplanner.com/img/patients.png    1x,
+                        https://www.docplanner.com/img/patients@2x.png 2x
+                      "
+                      width="35"
+                      height="40"
+                    />
+                    <h3>
+                      80,000,000 <br />
+                      patients
+                    </h3>
+                    <p>visit our websites each month</p>
+                  </div>
+                </div>
+              </div>
+              <div class="right-item">
+                <div class="right-item-1">
+                  <div class="blocks">
+                    <img
+                      scr="https://www.docplanner.com/img/doctors.png"
+                      srcset="
+                        https://www.docplanner.com/img/doctors.png    1x,
+                        https://www.docplanner.com/img/doctors@2x.png 2x
+                      "
+                      width="35"
+                      height="40"
+                    />
+                    <h3>
+                      130,000<br />
+                      active doctors
+                    </h3>
+                    <p>trust our solutions</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- ---------------SIXTH SECTION ------------------->
+      <div class="sixth-section">
+        <div class="section-header">
+          <h1>Improve the lives of millions. Change yours forever.</h1>
+          <p>
+            More than 2,200 team mates share our same vision, goals and passion.
+            With offices in Warsaw, Barcelona, Munich, Istanbul, Rome, Bologna,
+            Mexico City and Curitiba, our search for great talent never stops.
+          </p>
+        </div>
+        <div class="section-list">
+          <div class="content-6">
+            <img
+              scr="https://www.docplanner.com/images/warsaw.png"
+              srcset="
+                https://www.docplanner.com/images/warsaw.png    1x,
+                https://www.docplanner.com/images/warsaw@2x.png 2x
+              "
+            />
+            <div class="office__desc">
+              Mexico City
+              <span class="btn btn--small">See openings</span>
+            </div>
+          </div>
+          <div class="content-6">
+            <img
+              scr="https://www.docplanner.com/images/warsaw.png"
+              srcset="
+                https://www.docplanner.com/images/warsaw.png    1x,
+                https://www.docplanner.com/images/warsaw@2x.png 2x
+              "
+            />
+            <div class="office__desc">
+              Mexico City
+              <span class="btn btn--small">See openings</span>
+            </div>
+          </div>
+          <div class="content-6">
+            <img
+              scr="https://www.docplanner.com/images/warsaw.png"
+              srcset="
+                https://www.docplanner.com/images/warsaw.png    1x,
+                https://www.docplanner.com/images/warsaw@2x.png 2x
+              "
+            />
+            <div class="office__desc">
+              Mexico City
+              <span class="btn btn--small">See openings</span>
+            </div>
+          </div>
+          <div class="content-6">
+            <img
+              scr="https://www.docplanner.com/images/warsaw.png"
+              srcset="
+                https://www.docplanner.com/images/warsaw.png    1x,
+                https://www.docplanner.com/images/warsaw@2x.png 2x
+              "
+            />
+            <div class="office__desc">
+              Mexico City
+              <span class="btn btn--small">See openings</span>
+            </div>
+          </div>
+          <div class="content-6">
+            <img
+              scr="https://www.docplanner.com/images/warsaw.png"
+              srcset="
+                https://www.docplanner.com/images/warsaw.png    1x,
+                https://www.docplanner.com/images/warsaw@2x.png 2x
+              "
+            />
+            <div class="office__desc">
+              Mexico City
+              <span class="btn btn--small">See openings</span>
+            </div>
+          </div>
+          <div class="content-6">
+            <img
+              scr="https://www.docplanner.com/images/warsaw.png"
+              srcset="
+                https://www.docplanner.com/images/warsaw.png    1x,
+                https://www.docplanner.com/images/warsaw@2x.png 2x
+              "
+            />
+            <div class="office__desc">
+              Mexico City
+              <span class="btn btn--small">See openings</span>
+            </div>
+          </div>
+          <div class="content-6">
+            <img
+              scr="https://www.docplanner.com/images/warsaw.png"
+              srcset="
+                https://www.docplanner.com/images/warsaw.png    1x,
+                https://www.docplanner.com/images/warsaw@2x.png 2x
+              "
+            />
+            <div class="office__desc">
+              Mexico City
+              <span class="btn btn--small">See openings</span>
+            </div>
+          </div>
+          <div class="content-6">
+            <img
+              scr="https://www.docplanner.com/images/warsaw.png"
+              srcset="
+                https://www.docplanner.com/images/warsaw.png    1x,
+                https://www.docplanner.com/images/warsaw@2x.png 2x
+              "
+            />
+            <div class="office__desc">
+              Mexico City
+              <span class="btn btn--small">See openings</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="join-us-section__inner">
+        <div class="join-us__header">
+          <h1>Sounds interesting? Join us now!</h1>
+          <a href="/career" class="btn">See all current openings</a>
         </div>
       </div>
     </main>
