--- a/index.html
+++ b/index.html
@@ -15,8 +15,27 @@
         <ul>
           <li><a class="colorGreen" href="#">About us</a></li>
           <li><a>Career</a></li>
-          <li>
-            <a>Departments</a>
+          <li class="dropdown">
+            <a> Departments<br /> </a>
+            <div class="dropdown-content">
+              <ul>
+                <li>
+                  <a href="/department?dep=marketing">Marketing &amp; PR</a>
+                </li>
+                <li>
+                  <a href="/department?dep=customer"
+                    >Customer Success & Sales</a
+                  >
+                </li>
+                <li><a href="/department?dep=it">IT, Product, Data</a></li>
+                <li>
+                  <a href="/department?dep=finance"
+                    >Finance &amp; Administration</a
+                  >
+                </li>
+                <li><a href="/department?dep=hr">HR &amp; more</a></li>
+              </ul>
+            </div>
           </li>
         </ul>
       </nav>
