--- a/index.html
+++ b/index.html
@@ -392,85 +392,85 @@
               "
             />
             <div class="office__desc">
-              Mexico City
+              Warsaw
               <span class="btn btn--small">See openings</span>
             </div>
           </div>
           <div class="content-6">
             <img
-              scr="https://www.docplanner.com/images/warsaw.png"
+              scr="https://www.docplanner.com/images/barcelona.png"
               srcset="
-                https://www.docplanner.com/images/warsaw.png    1x,
-                https://www.docplanner.com/images/warsaw@2x.png 2x
+                https://www.docplanner.com/images/barcelona.png    1x,
+                https://www.docplanner.com/images/barcelona@2x.png 2x
               "
             />
             <div class="office__desc">
-              Mexico City
+              Barcelona
               <span class="btn btn--small">See openings</span>
             </div>
           </div>
           <div class="content-6">
             <img
-              scr="https://www.docplanner.com/images/warsaw.png"
+              scr="https://www.docplanner.com/images/munich.png"
               srcset="
-                https://www.docplanner.com/images/warsaw.png    1x,
-                https://www.docplanner.com/images/warsaw@2x.png 2x
+                https://www.docplanner.com/images/munich.png    1x,
+                https://www.docplanner.com/images/munich@2x.png 2x
               "
             />
             <div class="office__desc">
-              Mexico City
+              Munich
               <span class="btn btn--small">See openings</span>
             </div>
           </div>
           <div class="content-6">
             <img
-              scr="https://www.docplanner.com/images/warsaw.png"
+              scr="https://www.docplanner.com/images/istanbul.png"
               srcset="
-                https://www.docplanner.com/images/warsaw.png    1x,
-                https://www.docplanner.com/images/warsaw@2x.png 2x
+                https://www.docplanner.com/images/istanbul.png    1x,
+                https://www.docplanner.com/images/istanbul@2x.png 2x
               "
             />
             <div class="office__desc">
-              Mexico City
+              Istanbul
               <span class="btn btn--small">See openings</span>
             </div>
           </div>
           <div class="content-6">
             <img
-              scr="https://www.docplanner.com/images/warsaw.png"
+              scr="https://www.docplanner.com/images/rome.png"
               srcset="
-                https://www.docplanner.com/images/warsaw.png    1x,
-                https://www.docplanner.com/images/warsaw@2x.png 2x
+                https://www.docplanner.com/images/rome.png    1x,
+                https://www.docplanner.com/images/rome@2x.png 2x
               "
             />
             <div class="office__desc">
-              Mexico City
+              Rome
               <span class="btn btn--small">See openings</span>
             </div>
           </div>
           <div class="content-6">
             <img
-              scr="https://www.docplanner.com/images/warsaw.png"
+              scr="https://www.docplanner.com/images/bologna.png"
               srcset="
-                https://www.docplanner.com/images/warsaw.png    1x,
-                https://www.docplanner.com/images/warsaw@2x.png 2x
+                https://www.docplanner.com/images/bologna.png    1x,
+                https://www.docplanner.com/images/bologna@2x.png 2x
               "
             />
             <div class="office__desc">
-              Mexico City
+              Bologna
               <span class="btn btn--small">See openings</span>
             </div>
           </div>
           <div class="content-6">
             <img
-              scr="https://www.docplanner.com/images/warsaw.png"
+              scr="https://www.docplanner.com/images/curitiba.png"
               srcset="
-                https://www.docplanner.com/images/warsaw.png    1x,
-                https://www.docplanner.com/images/warsaw@2x.png 2x
+                https://www.docplanner.com/images/curitiba.png    1x,
+                https://www.docplanner.com/images/curitiba@2x.png 2x
               "
             />
             <div class="office__desc">
-              Mexico City
+              Curitiba
               <span class="btn btn--small">See openings</span>
             </div>
           </div>
